fix: slack git 연동 수정(test)